# itmm-aads-lab2-matrix-2025

solutions/BasalaevD/: CMakeLists.txt
solutions/BasalaevD/include/: tmatrix.h
solutions/BasalaevD/test/: test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
solutions/GerasimenkoA/include/: tmatrix.h
solutions/GerasimenkoA/test/: test_tmatrix.cpp  test_tvector.cpp
